--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang ="en">
     <head>
@@ -10,7 +9,7 @@
         <h2>I'm a Web Developer</h2>
         <hr />
         <a href="./public/movie.html">Movie Ranking Project</a>
-        <img src="./assets/images/movie_rank.png" height="400" alt="movie_ranking"/>
+        <img src="./assets/images/movie_rank.png" alt="movie_ranking"/>
         <a href="./public/birthday.html">Birthday Invite Project</a>
         <img src="./assets/images/birthday_invite.png"  alt="Birthday invite" />
         <hr />
@@ -20,16 +19,3 @@
         </body>
     </body>
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
