--- a/index.html
+++ b/index.html
@@ -1,24 +1,73 @@
 <!DOCTYPE html>
-<html lang ="en">
+<html lang="en"> 
     <head>
         <meta charset="UTF-8">
-        <title>My Portfolio</title>
+        <title>My Resume</title>
     </head>
     <body>
-        <h1>Karthik's Portfolio</h1>
-        <h2>I'm a Web Developer</h2>
-        <hr />
-        <a href="./public/movie.html">Movie Ranking Project</a>
-        <br/>
-        <img src="./assets/images/movie_rank.png"   alt="movie_ranking"/>
-        <br/>
-        <a href="./public/birthday.html">Birthday Invite Project</a>
-        <br/>
-        <img src="./assets/images/birthday_invite.png"  alt="Birthday invite" />
-        <hr />
-        <a href="./public/about.html">About Me</a>
-        <a href="./public/contact.html">Contact Me</a>
-        
-        </body>
+        <h1>Karthik S Nair</h1>
+        <img src="images/Karthik S Nair.jpg"  height="150" width="120" alt="passport size photo">
+        <h2>Objective</h2>
+        <p>To get an opportunity where I can make the best of my potential and 
+            contribute to the organization’s growth.</p>
+        <hr>
+            <h2>Education</h2>
+            <h3>Rajagiri School of engineering and technology - Btech</h3>
+            <ul>
+                <li>July 2019 - July 2023</li>
+                <li>CGPA : 8.48</li>
+            </ul>
+            <h3>Jyothi Nivas Senior Secondary School - 12th CBSE</h3>
+            <ul>
+                <li>June 2018 - March 2019</li>
+                <li>Percentage : 88.8</li>
+            </ul>
+            <h3>Jyothi Nivas Senior Secondary School - 10th CBSE</h3>
+            <ul>
+                <li>June 2016 - March 2017</li>
+                <li>CGPA : 10</li>
+            </ul>
+        <hr>
+        <h2>Certification</h2>
+        <ul>
+            <li>Digital nurture SALESFORCE CERTIFICATION</li>
+            <li>“Python For Everybody” from coursera</li>
+            <li>“Introduction to HTML” from coursera</li>
+            <li>Industrial Project on Web Development from Revertech IT solutions </li>
+        </ul>
+        <hr>
+        <h2>Hackathons</h2>
+        <ul>
+            <li>Participated in 30 hr Hackathon (Slashkey) conducted by IEEE CS KS</li>
+            <li>Participated in Google Hashcode</li>
+            <li>Ranked 759 in IEEE xtreme 15.0</li>
+        </ul>
+        <hr>
+        <h2>Projects</h2>
+        <ul>
+            <li>Body Movement Based Game Control System</li>
+            <li>IoT Based Smart Parking System - <a href="https://ieeexplore.ieee.org/document/10165132">IEEE paper published in ICCC 2023</a></li>
+        </ul>
+        <hr>
+        <h2>Skills</h2>
+        <ul>
+            <li>Adaptability ⭐⭐⭐⭐⭐</li>
+            <li>Team Player ⭐⭐⭐⭐⭐</li>
+            <li>Communication ⭐⭐⭐⭐</li>
+        </ul>
+        <hr>
+        <h2>Awards</h2>
+        <p>“BEST OUTGOING STUDENT AWARD”
+            Of Jyothi Nivas Public School<br>
+            Academic Year : 2018 - 2019</p>
+        <hr>
+        <h2>Other</h2>
+        <ul>
+            <li><a href="hobbies.html">My Hobbies</a></li>
+            <li><a href="Contact.html">Contact Me</a></li>
+        </ul>
+        <footer>
+            <p>©️ karthik_s_nair</p>
+        </footer>
     </body>
 </html>
